feat: 감사 지원을 포함한 제품 관리 기능 구현

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -4,5 +4,25 @@ spring:
     url: jdbc:h2:mem:testdb
     username: sa
     password: password
+
 server:
   port: 9000
+
+
+---
+
+spring:
+  config:
+    activate:
+      on-profile: dev
+  jpa:
+    hibernate:
+      ddl-auto: create
+
+
+---
+
+spring:
+  config:
+    activate:
+      on-profile: prod
