feat: 표준화된 API 응답을 위한 ApiResponse 클래스 추가, Review 엔티티 및 관련 서비스 구현

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -4,6 +4,10 @@ spring:
     url: jdbc:h2:mem:testdb
     username: sa
     password: password
+  jpa:
+    properties:
+      hibernate:
+        default_batch_fetch_size: 50
 
 server:
   port: 9000
