feat: 이메일 전송 기능 개선 및 비동기 처리 추가, 환영 이메일 HTML 템플릿 구현

--- a/build.gradle
+++ b/build.gradle
@@ -13,6 +13,10 @@ java {
     }
 }
 
+tasks.withType(Test).configureEach {
+    jvmArgs += "-javaagent:${configurations.testRuntimeClasspath.find { it.name.contains("byte-buddy-agent") }}"
+}
+
 configurations {
     compileOnly {
         extendsFrom annotationProcessor
@@ -46,6 +50,7 @@ dependencies {
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
     testImplementation 'org.mockito:mockito-core'
     testImplementation 'org.springframework.security:spring-security-test'
+    testImplementation 'org.mockito:mockito-inline:5.2.0'
     testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
 }
 
