feat: Dockerfile 및 CORS 설정 업데이트, Gradle 빌드 최적화 및 환경 변수 추가

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -18,6 +18,9 @@ spring:
       mail.smtp.auth: true
       mail.smtp.starttls.enable: true
 
+cors:
+  allowed-origins: ${CORS_ALLOWED_ORIGINS:"http://localhost"}
+
 server:
   port: 8080
 
@@ -35,11 +38,13 @@ spring:
       host: localhost
       port: 6379
 
-
-
 ---
 
 spring:
   config:
     activate:
       on-profile: prod
+  data:
+    redis:
+      host: localhost
+      port: 6379
