--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -19,7 +19,7 @@ spring:
       mail.smtp.starttls.enable: true
 
 cors:
-  allowed-origins: ${CORS_ALLOWED_ORIGINS:"http://localhost"}
+  allowed-origins: ${CORS_ALLOWED_ORIGINS:http://localhost, http://192.168.0.17}
 
 server:
   port: 8080
