feat: 주문 처리 후 뷰에 대한 컨트롤러 추가 & 배송 연동을 위한 kafka 라이브러리 추가

--- a/build.gradle
+++ b/build.gradle
@@ -34,6 +34,7 @@ dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-actuator'
     implementation 'org.springframework.boot:spring-boot-starter-hateoas'
     implementation 'org.springframework.boot:spring-boot-starter-mail'
+    implementation 'org.springframework.kafka:spring-kafka'
 
     implementation 'io.github.cdimascio:java-dotenv:5.2.2'
     implementation 'commons-beanutils:commons-beanutils:1.9.4'
@@ -48,13 +49,16 @@ dependencies {
 
     compileOnly 'org.projectlombok:lombok'
     runtimeOnly 'com.h2database:h2'
+    runtimeOnly 'com.mysql:mysql-connector-j'
     annotationProcessor 'org.projectlombok:lombok'
 
+    // Test
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
     testImplementation 'org.mockito:mockito-core'
     testImplementation 'org.springframework.security:spring-security-test'
     testImplementation 'org.mockito:mockito-inline:5.2.0'
-    runtimeOnly 'com.mysql:mysql-connector-j'
+    testImplementation 'org.springframework.kafka:spring-kafka-test'
+
     testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
 }
 
