feat: 애플리케이션 구성 업데이트, 에러 로깅 강화 및 주문 검증 로직 개선

--- a/docker-compose-sample.yml
+++ b/docker-compose-sample.yml
@@ -14,6 +14,7 @@ services:
     image: mysql:8.0
     container_name: mysql
     environment:
+      TZ: Asia/Seoul
       MYSQL_ROOT_PASSWORD: root
       MYSQL_DATABASE: shopdb
       MYSQL_USER: shopuser
@@ -41,6 +42,7 @@ services:
       - redis
       - mysql
     environment:
+      TZ: Asia/Seoul
       SPRING_PROFILES_ACTIVE: prod
       SPRING_DATA_REDIS_HOST: redis
       SPRING_DATA_REDIS_PORT: 6379
