feat: RSA 기반의 사용자 인증 추가 및 관련 보안 설정 업데이트

--- a/.gitignore
+++ b/.gitignore
@@ -1,23 +1,16 @@
 HELP.md
 .gradle
-.env
 build/
 !gradle/wrapper/gradle-wrapper.jar
 !**/src/main/**/build/
 !**/src/test/**/build/
+
+### Shell ###
 dockerbuild.sh
 
-### STS ###
-.apt_generated
-.classpath
-.factorypath
-.project
-.settings
-.springBeans
-.sts4-cache
-bin/
-!**/src/main/**/bin/
-!**/src/test/**/bin/
+### Security ###
+.env
+private_key.pem
 
 ### IntelliJ IDEA ###
 .idea
@@ -28,12 +21,3 @@ out/
 !**/src/main/**/out/
 !**/src/test/**/out/
 
-### NetBeans ###
-/nbproject/private/
-/nbbuild/
-/dist/
-/nbdist/
-/.nb-gradle/
-
-### VS Code ###
-.vscode/
