--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -17,7 +17,7 @@ spring:
       host: localhost
       port: 6379
 cors:
-  allowed-origins: ${CORS_ALLOWED_ORIGINS:http://localhost, http://192.168.0.17}
+  allowed-origins: ${CORS_ALLOWED_ORIGINS:http://localhost, http://127.0.0.1, http://192.168.0.17}
 
 server:
   port: 8080
@@ -37,6 +37,9 @@ spring:
     url: jdbc:mysql://localhost:3306/shopdb?useSSL=false&allowPublicKeyRetrieval=true&serverTimezone=UTC
     username: shopuser
     password: shop123
+security:
+  rsa:
+    private-key-path: private_key.pem
 
 ---
 
@@ -50,3 +53,6 @@ spring:
     database-platform: org.hibernate.dialect.MySQLDialect
   datasource:
     driver-class-name: com.mysql.cj.jdbc.Driver
+security:
+  rsa:
+    private-key-path: /app/config/private_key.pem
