feat: docker-compose에 config 디렉토리 볼륨 추가

--- a/docker-compose-sample.yml
+++ b/docker-compose-sample.yml
@@ -52,6 +52,7 @@ services:
       SPRING_DATASOURCE_PASSWORD: shop123
     volumes:
       - /applog/api:/applog
+      - /app/config:/app/config
     networks:
       - app_network
 
