--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -22,6 +22,17 @@ spring:
     redis:
       host: localhost
       port: 6379
+  kafka:
+    bootstrap-servers: localhost:9092
+    consumer:
+      group-id: delivery-group
+      auto-offset-reset: earliest
+      key-deserializer: org.apache.kafka.common.serialization.StringSerializer
+      value-deserializer: org.apache.kafka.common.serialization.StringSerializer
+      properties:
+        enable.auto.commit: false
+        max.poll.records: 10
+
 cors:
   allowed-origins: ${CORS_ALLOWED_ORIGINS:http://localhost, http://127.0.0.1, http://192.168.0.17}
 
