--- a/src/test/resources/application.yml
+++ b/src/test/resources/application.yml
@@ -22,9 +22,19 @@ spring:
     redis:
       host: localhost
       port: 6379
+  kafka:
+    bootstrap-servers: localhost:9092
+    consumer:
+      group-id: delivery-group
+      auto-offset-reset: earliest
+      key-deserializer: org.apache.kafka.common.serialization.StringSerializer
+      value-deserializer: org.apache.kafka.common.serialization.StringSerializer
+      properties:
+        enable.auto.commit: false
+        max.poll.records: 10
 cors:
   allowed-origins: http://127.0.0.1
 
 security:
   rsa:
-    private-key-path: private_key.pem
+    private-key-path: src/test/resources/test_private_key.pem
