--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,4 +1,6 @@
 spring:
+  lifecycle:
+    timeout-per-shutdown-phase: 30s
   jpa:
     properties:
       hibernate:
@@ -38,6 +40,9 @@ management:
     web:
       exposure:
         include: health,info
+  health:
+    kafka:
+      enabled: true
   endpoint:
     health:
       show-details: always
@@ -47,6 +52,7 @@ cors:
 
 server:
   port: 8080
+  shutdown: graceful
 
 ---
 
@@ -58,7 +64,7 @@ spring:
     hibernate:
       ddl-auto: update
     database-platform: org.hibernate.dialect.MySQLDialect
-    show-sql: true
+#    show-sql: true
   datasource:
     driver-class-name: com.mysql.cj.jdbc.Driver
     url: jdbc:mysql://localhost:3306/shopdb?useSSL=false&allowPublicKeyRetrieval=true&serverTimezone=UTC
