feat: 테스트 코드 보완
 - 수정된 개발에 대하여 테스트 코드 수정
 - @Display name 설몇 추가

--- a/src/test/resources/application.yml
+++ b/src/test/resources/application.yml
@@ -38,3 +38,7 @@ cors:
 security:
   rsa:
     private-key-path: src/test/resources/test_private_key.pem
+
+event:
+  l4:
+    url: http://localhost:8090
