--- a/docker-compose-sample.yml
+++ b/docker-compose-sample.yml
@@ -1,122 +1,125 @@
-  services:
-    shopping:
-      image: epfzja/shopping-app:x86_64
-      container_name: shopping-app
-      restart: always
-      ports:
-        - "8080:8080"
-      depends_on:
-        - redis
-        - mysql
-      environment:
-        TZ: Asia/Seoul
-        SPRING_PROFILES_ACTIVE: prod
-        SPRING_DATA_REDIS_HOST: redis
-        SPRING_DATA_REDIS_PORT: 6379
-        CORS_ALLOWED_ORIGINS: http://172.17.0.1
-        SPRING_DATASOURCE_URL: jdbc:mysql://mysql:3306/shopdb?useSSL=false&allowPublicKeyRetrieval=true&serverTimezone=UTC
-        SPRING_DATASOURCE_USERNAME: shopuser
-        SPRING_DATASOURCE_PASSWORD: shop123
-        JAVA_TOOL_OPTIONS: "-Xms100m -Xmx150m"
-      volumes:
-        - /applog/api:/applog
-        - /app/config:/app/config
-      networks:
-        - app_network
+services:
+  shopping:
+    image: epfzja/shopping-app:x86_64
+    container_name: shopping-app
+    restart: always
+    ports:
+      - "8080:8080"
+    depends_on:
+      - redis
+      - mysql
+    environment:
+      TZ: Asia/Seoul
+      SPRING_PROFILES_ACTIVE: prod
+      SPRING_JPA_HIBERNATE_DDL_AUTO: none
+      SPRING_DATA_REDIS_HOST: redis
+      SPRING_DATA_REDIS_PORT: 6379
+      CORS_ALLOWED_ORIGINS: http://172.17.0.1
+      SPRING_DATASOURCE_URL: jdbc:mysql://mysql:3306/shopdb?useSSL=false&allowPublicKeyRetrieval=true&serverTimezone=UTC
+      SPRING_DATASOURCE_USERNAME: shopuser
+      SPRING_DATASOURCE_PASSWORD: shop123
+      JAVA_TOOL_OPTIONS: "-Xms100m -Xmx150m"
+      EVENT_L4_URL: http://event:8090
+    volumes:
+      - /applog/api:/applog
+      - /app/config:/app/config
+    networks:
+      - app_network
 
-    vue:
-      image: epfzja/shopping-vue:x86_64
-      container_name: vue-app
-      restart: always
-      ports:
-        - "80:80"
-        - "443:443"
-      depends_on:
-        - shopping
-      volumes:
-        - /applog/nginx:/applog
-        - /app/config/nginx.conf:/etc/nginx/conf.d/default.conf:ro
-      networks:
-        - app_network
+  vue:
+    image: epfzja/shopping-vue:x86_64
+    container_name: vue-app
+    restart: always
+    ports:
+      - "80:80"
+      - "443:443"
+    depends_on:
+      - shopping
+    volumes:
+      - /applog/nginx:/applog
+      - /app/config/nginx.conf:/etc/nginx/conf.d/default.conf:ro
+    networks:
+      - app_network
 
-    event:
-      image: epfzja/shopping-event:x86_64
-      container_name: shopping-event
-      restart: always
-      ports:
-        - "8090:8090"
-      depends_on:
-        - shopping
-        - redis
-        - mysql
-        - kafka
-      environment:
-        SPRING_PROFILES_ACTIVE: prod
-        SPRING_DATASOURCE_EVENT_JDBC_URL: jdbc:mysql://mysql:3306/eventdb?useSSL=false&allowPublicKeyRetrieval=true&serverTimezone=UTC
-        SPRING_DATASOURCE_SHOP_JDBC_URL: jdbc:mysql://mysql:3306/shopdb?useSSL=false&allowPublicKeyRetrieval=true&serverTimezone=UTC
-        SPRING_KAFKA_BOOTSTRAP_SERVERS: kafka:9092
-        SPRING_DATA_REDIS_HOST: redis
-        JAVA_TOOL_OPTIONS: "-Xms100m -Xmx150m"
-      volumes:
-        - /applog/event:/applog
-      networks:
-        - app_network
+  event:
+    image: epfzja/shopping-event:x86_64
+    container_name: shopping-event
+    restart: always
+    ports:
+      - "8090:8090"
+    depends_on:
+      - shopping
+      - redis
+      - mysql
+      - kafka
+    environment:
+      FEATURE_POINT-CONSUMER_ENABLED: false
+      SPRING_PROFILES_ACTIVE: prod
+      SPRING_DATASOURCE_EVENT_JDBC_URL: jdbc:mysql://mysql:3306/eventdb?useSSL=false&allowPublicKeyRetrieval=true&serverTimezone=UTC
+      SPRING_DATASOURCE_SHOP_JDBC_URL: jdbc:mysql://mysql:3306/shopdb?useSSL=false&allowPublicKeyRetrieval=true&serverTimezone=UTC
+      SPRING_KAFKA_BOOTSTRAP_SERVERS: kafka:9092
+      SPRING_DATA_REDIS_HOST: redis
+      JAVA_TOOL_OPTIONS: "-Xms100m -Xmx150m"
+    volumes:
+      - /applog/event:/applog
+    networks:
+      - app_network
 
-    redis:
-      image: redis:latest
-      container_name: redis
-      restart: always
-      ports:
-        - "6379:6379"
-      volumes:
-        - /data/redis:/data
-      networks:
-        - app_network
+  redis:
+    image: redis:latest
+    container_name: redis
+    restart: always
+    ports:
+      - "6379:6379"
+    volumes:
+      - /data/redis:/data
+    networks:
+      - app_network
 
-    mysql:
-      image: mysql:8.0
-      container_name: mysql
-      environment:
-        TZ: Asia/Seoul
-        MYSQL_ROOT_PASSWORD: root
-        MYSQL_DATABASE: shopdb
-        MYSQL_USER: shopuser
-        MYSQL_PASSWORD: shop123
-      volumes:
-        - /data/mysql:/var/lib/mysql
-        - /applog/mysql:/var/log/mysql
-      command:
-        [
-          "--log-error=/var/log/mysql/error.log",
-          "--general-log-file=/var/log/mysql/general.log",
-          "--general-log=1",
-          "--innodb-buffer-pool-size=64M",
-          "--max-connections=20"
-        ]
-      ports:
-        - "3306:3306"
-      networks:
-        - app_network
+  mysql:
+    image: mysql:8.0
+    container_name: mysql
+    environment:
+      TZ: Asia/Seoul
+      MYSQL_ROOT_PASSWORD: root
+      MYSQL_DATABASE: shopdb
+      MYSQL_USER: shopuser
+      MYSQL_PASSWORD: shop123
+    volumes:
+      - /data/mysql:/var/lib/mysql
+      - /applog/mysql:/var/log/mysql
+    command:
+      [
+        "--max-connections=500",
+        "--log-error=/var/log/mysql/error.log",
+        "--general-log-file=/var/log/mysql/general.log",
+        "--general-log=1",
+        "--innodb-buffer-pool-size=64M"
+      ]
+    ports:
+      - "3306:3306"
+    networks:
+      - app_network
 
-    kafka:
-      image: bitnami/kafka:3.5
-      container_name: kafka
-      restart: always
-      ports:
-        - "9092:9092"
-      environment:
-        - KAFKA_CFG_NODE_ID=1
-        - KAFKA_KRAFT_CLUSTER_ID=rHfMcel7ShqC5hPfNev1RA==
-        - KAFKA_CFG_PROCESS_ROLES=controller,broker
-        - KAFKA_CFG_CONTROLLER_LISTENER_NAMES=CONTROLLER
-        - KAFKA_CFG_LISTENERS=PLAINTEXT://:9092,CONTROLLER://:9093
-        - KAFKA_CFG_LISTENER_SECURITY_PROTOCOL_MAP=CONTROLLER:PLAINTEXT,PLAINTEXT:PLAINTEXT
-        - KAFKA_CFG_CONTROLLER_QUORUM_VOTERS=1@localhost:9093
-        - KAFKA_CFG_ADVERTISED_LISTENERS=PLAINTEXT://kafka:9092
-        - KAFKA_CFG_AUTO_CREATE_TOPICS_ENABLE=true
-      networks:
-        - app_network
+  kafka:
+    image: bitnami/kafka:3.5
+    container_name: kafka
+    restart: always
+    ports:
+      - "9092:9092"
+    environment:
+      - KAFKA_CFG_NODE_ID=1
+      - KAFKA_KRAFT_CLUSTER_ID=rHfMcel7ShqC5hPfNev1RA==
+      - KAFKA_CFG_PROCESS_ROLES=controller,broker
+      - KAFKA_CFG_CONTROLLER_LISTENER_NAMES=CONTROLLER
+      - KAFKA_CFG_LISTENERS=PLAINTEXT://:9092,CONTROLLER://:9093
+      - KAFKA_CFG_LISTENER_SECURITY_PROTOCOL_MAP=CONTROLLER:PLAINTEXT,PLAINTEXT:PLAINTEXT
+      - KAFKA_CFG_CONTROLLER_QUORUM_VOTERS=1@localhost:9093
+      - KAFKA_CFG_ADVERTISED_LISTENERS=PLAINTEXT://kafka:9092
+      - KAFKA_CFG_AUTO_CREATE_TOPICS_ENABLE=true
+    networks:
+      - app_network
 
-  networks:
-    app_network:
-      driver: bridge
+networks:
+  app_network:
+    driver: bridge
